WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269959
HTMLDataListElement::childrenChanged doesn't call HTMLElement::childrenChanged
https://bugs.webkit.org/show_bug.cgi?id=269959
Summary
HTMLDataListElement::childrenChanged doesn't call HTMLElement::childrenChanged
Ryosuke Niwa
Reported
2024-02-22 17:43:41 PST
We must call super class' childrenChanged in HTMLDataListElement's override.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-02-22 17:45:38 PST
<
rdar://123388053
>
Ryosuke Niwa
Comment 2
2024-02-22 17:50:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24988
EWS
Comment 3
2024-02-22 22:56:42 PST
Committed
275221@main
(9a1d1c7db218): <
https://commits.webkit.org/275221@main
> Reviewed commits have been landed. Closing PR #24988 and removing active labels.
Ryosuke Niwa
Comment 4
2024-02-24 02:44:52 PST
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/25056
EWS
Comment 5
2024-02-24 02:56:10 PST
Committed
275278@main
(5f585dd134e1): <
https://commits.webkit.org/275278@main
> Reviewed commits have been landed. Closing PR #25056 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug