Cherry-pick 275221@main (9a1d1c7db218). https://bugs.webkit.org/show_bug.cgi?id=269959

HTMLDataListElement::childrenChanged doesn't call HTMLElement::childrenChanged
    https://bugs.webkit.org/show_bug.cgi?id=269959
    <rdar://123388053>

    Reviewed by Chris Dumez.

    This can lead to an inconsistent state in DOM so call that.

    * LayoutTests/fast/dom/datalist-children-changed-crash-expected.txt: Added.
    * LayoutTests/fast/dom/datalist-children-changed-crash.html: Added.
    * Source/WebCore/dom/ContainerNode.cpp:
    (WebCore::ContainerNode::removeAllChildrenWithScriptAssertion): Added a debug
    assertion to catch a similar mistake in the future.
    * Source/WebCore/html/HTMLDataListElement.cpp:
    (WebCore::HTMLDataListElement::childrenChanged):

    Canonical link: https://commits.webkit.org/275221@main

Canonical link: https://commits.webkit.org/274313.180@webkitglib/2.44